--- a/src/views/pages/products.hbs
+++ b/src/views/pages/products.hbs
@@ -2,5 +2,8 @@
 
 <div class="body">
   <h1>Lista de productos</h1>
+  {{> categoryFilter}}
+  {{> priceSorting}}
   {{> productsList}}
+  {{> footer}}
 </div>
